apps/fe-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-web
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-web
  template:
    metadata:
      labels:
        app: fe-web
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "java-instrumentation"
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: fe-web
          image: harbor.platform.local/app/fe-web:92816f29
          ports:
            - containerPort: 80
