apps/fe-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-web
  namespace: app
spec:
  selector:
    app.kubernetes.io/name: fe-web
  ports:
    - port: 80
      targetPort: 80
