apps/fe-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-web
  namespace: app
spec:
  rules:
    - host: app-react.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-web
                port:
                  number: 80
